# bhuvesh

./: .cursorrules  .env.example  .eslintignore  .gitignore  .npmrc  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .prettierignore  .vercelignore  DEVELOPMENT_GUIDE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DUPLICATION_CLEANUP_GUIDE.md  ENHANCED_ATS_SYSTEM.md  ENHANCEMENTS_SUMMARY.md  FRONTEND_ENV_SETUP.md  FRONTEND_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LATEST_UPDATE.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  RAILWAY_BUILD_OPTIMIZATION.md  RAILWAY_DEPLOYMENT.md  README.md  cypress.config.js  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  test-bypass.txt  test-bypass2.txt  test-commit.txt  tsconfig.cypress.json  tsconfig.jest.json  tsconfig.json  vercel.json
.husky/: README.md  commit-msg  pre-commit  pre-commit-balanced  pre-commit-basic  pre-commit-comprehensive  pre-commit-fast  pre-commit-minimal  pre-commit-simple  pre-commit-ultra-simple  pre-commit-unified  pre-push
backend/: .cursorrules  .dockerignore  .env.example  .pre-commit-config.yaml  Bhuvesh_Singla_Resume.docx_extracted.txt  COMPREHENSIVE_EXTRACTION_SUMMARY.md  Dockerfile  ENVIRONMENT_VARIABLES.md  EXPANSION_OPTIONS.md  FRONTEND_INTEGRATION.md  GEMINI_SETUP.md  Makefile  RAILWAY_DEPLOYMENT_FIX.md  README.md  README_ENHANCED.md  cloudbuild.yaml  deploy.sh  fly.toml  healthcheck.py  nixpacks.toml  pyproject.toml  railway.toml  requirements-minimal.txt  requirements.txt  start.py  test_api.py  test_complete_system.py  test_enhanced_ats.py  test_extraction.py  test_fixes.py  test_resume.txt
backend/app/: main.py
backend/app/api/: upload.py
backend/app/core/: ai_config.py  deployment_config.py  error_handling.py
backend/app/helpers/: __init__.py  validation.py
backend/app/services/: ats_analyzer.py  job_description_generator.py  job_detector.py  project_extractor.py  resume_improver.py
backend/app/types/: __init__.py  api.py  ats.py  ats.py.backup  common.py  common_types.py  services.py
backend/app/utils/: __init__.py  compatibility.py  file_parser.py
backend/app_backup/: __init__.py
backend/app_backup/api/: upload.py
backend/app_backup/services/: ats_analyzer.py  job_description_generator.py  job_detector.py  project_extractor.py  resume_improver.py
backend/app_backup/utils/: file_parser.py
backend/docs/: ENVIRONMENT_VARIABLES.md  GITHUB_CLOUD_RUN_SETUP.md
backend/scripts/: set-cloud-run-env.sh  setup-github-trigger.sh
cypress/e2e/: accessibility.cy.js  component-system.cy.js  navigation.cy.js
cypress/support/: commands.js  component-index.html  component.d.ts  component.js  e2e.js
docs/: ACCESSIBILITY_AND_TESTING_SUMMARY.md  ACCESSIBILITY_GUIDE.md  API_TROUBLESHOOTING.md  ARCHITECTURE.md  DATA_FLOW_VERIFICATION.md  DEVELOPMENT_SETUP.md  GOOGLE_ADSENSE_SETUP.md  IMMEDIATE_IMPROVEMENTS_PLAN.md  IMPLEMENTATION_SUMMARY.md  PRE_COMMIT_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START_TESTING.md  README.md  RESUME_BUILDER_ROADMAP.md  SEO_GUIDE.md  TEMPLATE_GALLERY.md  TESTING_GUIDE.md  THEME_SYSTEM.md  TODO.md  UNIFIED_PRE_COMMIT_SYSTEM.md  styles-README.md
docs/backend/: DEBUG_EXTRACTION.md  GEMINI_SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  UNIVERSAL_RESUME_ANALYZER.md
docs/components/: README.md
docs/frontend/: FRONTEND_ENV_SETUP.md
prisma/: schema.prisma
public/: Aashish-Goel-Resume (1).docx  Bhuvesh_Singla_Resume.docx  manifest.json
public/resume-templates/business/: executive-classic.json  executive-modern.json
public/resume-templates/creative/: designer-modern.json  designer-portfolio.json
public/resume-templates/tech/: software-engineer-ats.json  software-engineer-modern.json  startup-bold.json
scripts/: check-backend.sh  quick-start.sh  setup-pre-commit.sh
src/api/: index.ts
src/api/endpoints/: ats.ts
src/app/: LayoutWrapper.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/about/: metadata.ts  opengraph-image.tsx  page.tsx
src/app/blog/: metadata.ts  opengraph-image.tsx  page.tsx
src/app/contact/: metadata.ts  opengraph-image.tsx  page.tsx
src/app/privacy/: page.tsx
src/app/projects/: metadata.ts  opengraph-image.tsx  page.tsx
src/app/resume/: layout.tsx  metadata.ts  page.tsx
src/app/services/: metadata.ts  opengraph-image.tsx  page.tsx
src/app/terms/: page.tsx
src/app/test-components/: page.tsx
src/components/: index.ts
src/components/SEO/: EnhancedStructuredData.tsx  SEOHead.tsx  SEOPerformanceMonitor.tsx  StructuredData.tsx
src/components/ads/: AdPlacement.tsx  AdSense.tsx  index.ts
src/components/ai/: ContentRestructuringDemo.tsx
src/components/analytics/: AnalyticsDebugger.tsx  AnalyticsTracker.tsx
src/components/atoms/: index.ts
src/components/auth/: LoginButton.tsx  LogoutButton.tsx  UserProfile.tsx  index.ts
src/components/common/: index.ts
src/components/demo/: ProgressDemo.tsx
src/components/layout/: Navigation.tsx  ResumeActionsMenu.tsx  ResumeDropdownContent.tsx  UnifiedWelcomeBarWithResumeDropdown.tsx  index.ts
src/components/modals/: CreateGroupModal.tsx  DeleteConfirmModal.tsx  RenameResumeModal.tsx  ResumeNamingModal.tsx
src/components/molecules/: index.ts
src/components/organisms/: index.ts
src/components/resume/: LiveATSScore.tsx  (+17 more)
src/contexts/: AnalyticsContext.tsx  ResumeNavigationContext.tsx  ThemeContext.tsx  TourContext.tsx
src/hooks/: useAdSense.ts  useAnalysisProgress.ts  useAnalytics.ts  useContentRestructuring.ts  useDraggablePanel.ts  useIntersectionObserver.ts  useLocalStorage.ts  useScrollPosition.ts  useThemeStyles.ts
src/lib/: auth.ts  data-types.ts  data.ts  gifs.ts  pageCards.ts
src/shared/: index.ts
src/store/: multiResumeStore.ts  resumeStore.ts  resumeStylingStore.ts
src/styles/: index.css  loading-animations.css  tour.css
src/types/: analytics.ts  api.ts  ats.ts  common.ts  components.ts  document.ts  external.d.ts  forms.ts  index.ts  jest-dom.d.ts  multiResume.ts  panels.ts  portfolio.ts  resume.ts  theme.ts  ui-components.ts  ui.ts
(+287 files in other folders)
